# deeponet-acoustic-wave-prop

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eval3D.py  eval3D_accuracy.py  main1D2D_eval.py  main1D2D_evaluate_accuracy.py  main3D_eval.py  main3D_eval_accuracy.py  main3D_eval_speed.py  main3D_evaluate_accuracy.py  main3D_train.py  main_loss_plot.py  pyproject.toml  pytest.ini  requirements.txt  train1D2D.py  train3D.py
.claude/: settings.local.json
.github/workflows/: tests.yml
convertH5/: assembly2D.py  main2D_assembly.py  main2D_convert_resolutions.py  main3D_DD.py  main3D_convert_dtype.py
convertH5/misc/: main_check_hdf5.py  main_data_normalization.py  main_hdf5_to_vst.py
datahandlers/: data_rw.py  datagenerators.py  grf_generation.py
deeponet_acoustics/: __init__.py  eval3D.py  main1D2D_inference.py  main1D2D_train.py  main3D_inference.py  main3D_inference_speed.py  main3D_train.py  main_inference.py  main_train.py  train1D2D.py  train3D.py
deeponet_acoustics/convertH5/: assembly2D.py  convert2D_resolutions.py  main2D_assembly.py  main2D_convert_resolutions.py  main3D_DD.py  main3D_convert_dtype.py
deeponet_acoustics/datahandlers/: data_rw.py  datagenerators.py  grf_generation.py  io.py
deeponet_acoustics/end2end/: inference.py  inference1D2D.py  inference3D.py  inference_speed.py  train.py  train1D2D.py  train3D.py
deeponet_acoustics/models/: CEOD.py  datastructures.py  deeponet.py  loss_functions.py  networks_flax.py
deeponet_acoustics/plotting/: info_printing.py  visualizing.py
deeponet_acoustics/scripts/: eval3D_accuracy.py  eval3D_speed.py  inference1D2D.py  loss_plot.py  main1D2D_train.py  main3D_eval_speed.py  main3D_inference.py  main3D_train.py  main_loss_plot.py
deeponet_acoustics/setup/: configurations.py  data.py  parsers.py  settings.py
deeponet_acoustics/utils/: dsp.py  feat_expansion.py  gaussian.py  timings.py  utils.py
deeponet_acoustics/visualization/: info_printing.py  visualizing.py
deeponet_room_acoustics/: __init__.py  main1D2D_inference.py  main1D2D_train.py  main3D_inference.py  main3D_inference_speed.py  main3D_train.py
deeponet_room_acoustics/datahandlers/: data_rw.py  datagenerators.py
deeponet_room_acoustics/end2end/: eval1D2D.py  eval3D.py  inference_speed.py  train1D2D.py  train3D.py
deeponet_room_acoustics/models/: deeponet.py  loss_functions.py  networks_flax.py
deeponet_room_acoustics/setup/: data.py  settings.py
deeponet_room_acoustics/visualization/: info_printing.py  visualizing.py
json_setups/: loss_plot_ids.py
json_setups/evaluations/: loss_plot_ids.py
json_setups/oneD/: settings.json
json_setups/threeD/: Lshape.json  Lshape_eval.json  choras_cube.json  choras_cube_eval.json  cube.json  cube6x6x6.json  cube6x6x6_216pos_eval.json  cube6x6x6_27pos_eval.json  cube6x6x6_6pos_eval.json  cube6x6x6_9pos_eval.json  cube_1src.json  cube_1src_eval.json  cube_eval.json  dome.json  (+7 more)
models/: CEOD.py  datastructures.py  deeponet.py  loss_functions.py  networks_flax.py
notebooks/: deeponet_tutorial.ipynb  deeponet_tutorial_solutions.ipynb  deeponet_tutorial_torch.ipynb
plotting/: visualizing.py
setup/: data.py  parsers.py  settings.py
tests/: __init__.py  conftest.py
utils/: gaussian.py  utils.py
(+175 files in other folders)
