[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeponet_acoustics"
version = "1.1.0"
description = "DeepONet for acoustic wave propagation"
authors = [
    { name = "Nikolas Borrel-Jensen", email = "nikolasborrel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [  
    "jax[cpu]>=0.6.2",
    "jaxlib",
    "flax>=0.6.10",
    "optax>=0.2.6",
    "orbax-checkpoint",
    "tensorboard",
    "tensorboard_plugin_profile",
    "torch>=2.8.0",
    "pytorch_lightning",
    "matplotlib",
    "smt",
    "pydot",
    "graphviz",
    "h5py",
    "tqdm",
    "meshio",
]

[project.optional-dependencies]
cuda12 = [
    "jax==0.7.2",
    "jaxlib==0.7.2",
]

[project.scripts]
deeponet-train3d = "deeponet_acoustics.main3D_train:main"
deeponet-infer3d = "deeponet_acoustics.main3D_inference:main"
deeponet-train1d2d = "deeponet_acoustics.main1D2D_train:main"
deeponet-infer1d2d = "deeponet_acoustics.main1D2D_inference:main"
