[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeponet_acoustics"
version = "1.1.0"
description = "DeepONet for acoustic wave propagation"
authors = [
    { name = "Nikolas Borrel-Jensen", email = "nikolasborrel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [  
    "jax[cpu]>=0.6.2",
    "jaxlib",
    "flax>=0.6.10",
    "optax>=0.2.6",
    "orbax-checkpoint",
    "tensorboard",
    "tensorboard_plugin_profile",
    "torch>=2.8.0",
    "pytorch_lightning",
    "matplotlib",
    "smt",
    "pydot",
    "graphviz",
    "h5py",
    "tqdm",
    "meshio",
    "h5py",
    "ruff",
    "pre-commit",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]==0.7.2",
    "jaxlib==0.7.2",
]

[tool.ruff]
   line-length = 88
   lint.select = ["E", "F", "I"]  # Error, pyflakes, isort rules
   lint.ignore = ["E501", "E731"]  # Ignore: line too long, lambda assignments

[project.scripts]
deeponet-train = "deeponet_acoustics.main_train:main"
deeponet-infer = "deeponet_acoustics.main_inference:main"
